RESOLVED FIXED116220
Frame flattening: crash when child iframe is removed during beforeload.
https://bugs.webkit.org/show_bug.cgi?id=116220
Summary Frame flattening: crash when child iframe is removed during beforeload.
alan
Reported 2013-05-16 05:24:07 PDT
ssia patch is coming up.
Attachments
Patch (4.21 KB, patch)
2013-05-16 05:40 PDT, alan
no flags
Patch (4.21 KB, patch)
2013-05-16 05:51 PDT, alan
no flags
Archive of layout-test-results from webkit-ews-14 for mac-mountainlion-wk2 (629.59 KB, application/zip)
2013-05-16 19:11 PDT, Build Bot
no flags
Patch (4.20 KB, patch)
2013-05-19 05:55 PDT, alan
no flags
Archive of layout-test-results from webkit-ews-10 for mac-mountainlion-wk2 (531.93 KB, application/zip)
2013-05-20 02:55 PDT, Build Bot
no flags
Patch (4.25 KB, patch)
2013-06-06 13:15 PDT, alan
no flags
alan
Comment 1 2013-05-16 05:30:04 PDT
alan
Comment 2 2013-05-16 05:40:43 PDT
Antti Koivisto
Comment 3 2013-05-16 05:47:47 PDT
Comment on attachment 201946 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=201946&action=review > Source/WebCore/page/FrameView.cpp:2660 > + // layout() protects FrameView(), but it still can get destroyed, when updateWidgets() FrameView() -> FrameView (and some unneeded commas)
alan
Comment 4 2013-05-16 05:51:51 PDT
Build Bot
Comment 5 2013-05-16 19:11:35 PDT
Comment on attachment 201948 [details] Patch Attachment 201948 [details] did not pass mac-wk2-ews (mac-wk2): Output: http://webkit-queues.appspot.com/results/494098 New failing tests: fast/frames/flattening/crash-remove-iframe-during-object-beforeload.html
Build Bot
Comment 6 2013-05-16 19:11:37 PDT
Created attachment 202009 [details] Archive of layout-test-results from webkit-ews-14 for mac-mountainlion-wk2 The attached test failures were seen while running run-webkit-tests on the mac-wk2-ews. Bot: webkit-ews-14 Port: mac-mountainlion-wk2 Platform: Mac OS X 10.8.2
alan
Comment 7 2013-05-19 05:55:57 PDT
Build Bot
Comment 8 2013-05-20 02:55:28 PDT
Comment on attachment 202232 [details] Patch Attachment 202232 [details] did not pass mac-wk2-ews (mac-wk2): Output: http://webkit-queues.appspot.com/results/515134 New failing tests: fast/frames/flattening/crash-remove-iframe-during-object-beforeload.html
Build Bot
Comment 9 2013-05-20 02:55:29 PDT
Created attachment 202266 [details] Archive of layout-test-results from webkit-ews-10 for mac-mountainlion-wk2 The attached test failures were seen while running run-webkit-tests on the mac-wk2-ews. Bot: webkit-ews-10 Port: mac-mountainlion-wk2 Platform: Mac OS X 10.8.3
alan
Comment 10 2013-06-06 13:15:49 PDT
WebKit Commit Bot
Comment 11 2013-06-07 03:35:25 PDT
Comment on attachment 203960 [details] Patch Clearing flags on attachment: 203960 Committed r151312: <http://trac.webkit.org/changeset/151312>
WebKit Commit Bot
Comment 12 2013-06-07 03:35:28 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.