Frame flattening: crash when child iframe is removed during beforeload. https://bugs.webkit.org/show_bug.cgi?id=116220

Patch by Zalan Bujtas <zalan@apple.com> on 2013-06-07
Reviewed by Antti Koivisto.

FrameView can get destroyed in updateWidget(). Normally, it is protected by layout()
but with frame flattening on, it can also be called asynchronously through the
post layout timer.

Source/WebCore:

Test: fast/frames/flattening/crash-remove-iframe-during-object-beforeload.html

* page/FrameView.cpp:
(WebCore::FrameView::performPostLayoutTasks):

LayoutTests:

* fast/frames/flattening/crash-remove-iframe-during-object-beforeload-expected.txt: Added.
* fast/frames/flattening/crash-remove-iframe-during-object-beforeload.html: Added.

Canonical link: https://commits.webkit.org/135578@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@151312 268f45cc-cd09-0410-ab3c-d52691b4dbfc