Source/WebCore/page/FrameView.cpp
@@ -2748,6 +2748,9 @@ void FrameView::performPostLayoutTasks()
     if (RenderView* renderView = this->renderView())
         renderView->updateWidgetPositions();
     
+    // layout() protects FrameView, but it still can get destroyed when updateWidgets()
+    // is called through the post layout timer.
+    RefPtr<FrameView> protector(this);
     for (unsigned i = 0; i < maxUpdateWidgetsIterations; i++) {
         if (updateWidgets())
             break;
